<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundDetail">

        <TextView
            android:id="@+id/movie_orig_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorTextIcon"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Original movie title" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.27"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_orig_title"
            card_view:cardBackgroundColor="@android:color/white">

            <ImageView
                android:id="@+id/movie_image_large"
                android:layout_width="369dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:layout_weight="0.66"
                android:contentDescription="@string/content_description"
                android:scaleType="center" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/movie_overview_label"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/overview_label"
            android:textAlignment="viewEnd"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_overview" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.17"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintLeft_toRightOf="@+id/movie_overview_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            tools:text="Movie Overview is here" />


        <TextView
            android:id="@+id/movie_rating_label"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/rating_label"
            android:textAlignment="viewEnd"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_user_rating" />

        <TextView
            android:id="@+id/movie_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/movie_rating_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
            tools:text="Movie User Rating" />

        <TextView
            android:id="@+id/movie_release_label"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/release_date_label"
            android:textAlignment="viewEnd"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_release_date" />


        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/movie_release_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_user_rating"
            tools:text="Movie release date" />

        <TextView
            android:id="@+id/movie_trailer_label"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/trailer_label"
            android:textAlignment="viewEnd"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/trailer_video" />


        <TextView
            android:id="@+id/trailer_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-4dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:text="This is the link to the trailer video"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintLeft_toRightOf="@+id/movie_trailer_label"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_label"
            app:layout_constraintRight_toLeftOf="@+id/imageButton"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.185" />

        <TextView
            android:id="@+id/movie_review_label"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/review_label"
            android:textAlignment="viewEnd"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_review"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/movie_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/movie_trailer_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_video"
            tools:text="This is where the review goes" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <ImageButton
            android:id="@+id/play_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:srcCompat="@android:drawable/ic_media_play"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/trailer_video"
            android:layout_marginTop="0dp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>